test/parser/ast/type_declaration/empty_tuple_error.exp
Error: Tuple must have at least one element
test/parser/ast/type_declaration/empty_tuple_error.myte:3:5-8
 3 | type t()
   |      ^^^